fix: constrain overflowing content for <pre> tags

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -5,3 +5,8 @@
       display: none;
    }
 }
+
+article pre {
+   overflow: auto;
+   padding: 1em;
+}
